[gd_scene load_steps=3 format=3 uid="uid://blpe06ieao1ot"]

[ext_resource type="Script" path="res://Prog54c.gd" id="1_m3o2g"]

[sub_resource type="LabelSettings" id="LabelSettings_mbwav"]
font_size = 35

[node name="Prog54c" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_m3o2g")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_bottom = 0.035
offset_left = 4.0
offset_top = 2.0
offset_right = 365.0
offset_bottom = 112.32
text = "Radius:"
label_settings = SubResource("LabelSettings_mbwav")
horizontal_alignment = 1

[node name="txtRad" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 364.0
offset_top = 4.0
offset_right = 732.0
offset_bottom = 116.0

[node name="btnCalc" type="Button" parent="."]
layout_mode = 0
offset_left = 22.0
offset_top = 485.0
offset_right = 347.0
offset_bottom = 648.0
text = "Calculate"

[node name="btnClear" type="Button" parent="."]
layout_mode = 0
offset_left = 418.0
offset_top = 484.0
offset_right = 743.0
offset_bottom = 647.0
text = "Clear"

[node name="btnexit" type="Button" parent="."]
layout_mode = 0
offset_left = 808.0
offset_top = 481.0
offset_right = 1151.0
offset_bottom = 646.0
text = "Exit"

[connection signal="pressed" from="btnCalc" to="." method="_on_btn_calc_pressed"]
[connection signal="pressed" from="btnClear" to="." method="_on_btn_clear_pressed"]
